# snarkVM

./: .gitignore  .license_header  AGENTS.md  CI.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
algorithms/: .rustfmt.toml  Cargo.toml
algorithms/benches/crypto_hash/: poseidon.rs
algorithms/benches/fft/: fft.rs
algorithms/benches/msm/: variable_base.rs
algorithms/benches/snark/: varuna.rs
algorithms/cuda/: Cargo.toml  build.rs
algorithms/cuda/cuda/: polynomial.cuh  snarkvm.cu  snarkvm_api.cu
algorithms/cuda/src/: lib.c  lib.rs
algorithms/examples/: msm.rs
algorithms/src/: errors.rs  lib.rs
algorithms/src/crypto_hash/: mod.rs  poseidon.rs  sha256.rs  tests.rs
algorithms/src/fft/: domain.rs  evaluations.rs  mod.rs  tests.rs
algorithms/src/msm/: fixed_base.rs  mod.rs  tests.rs
algorithms/src/polycommit/: error.rs  mod.rs  optional_rng.rs  test_templates.rs
algorithms/src/r1cs/: assignment.rs  constraint_counter.rs  constraint_system.rs  errors.rs  linear_combination.rs  mod.rs  namespace.rs  optional_vec.rs  test_constraint_checker.rs  test_constraint_system.rs
algorithms/src/snark/: mod.rs
algorithms/src/srs/: mod.rs  universal_prover.rs  universal_verifier.rs
algorithms/src/traits/: algebraic_sponge.rs  mod.rs  snark.rs
circuit/: Cargo.toml
circuit/account/: Cargo.toml  build.rs
circuit/account/src/: lib.rs
circuit/algorithms/: Cargo.toml
circuit/algorithms/src/: lib.rs  traits.rs
circuit/collections/: Cargo.toml
circuit/collections/src/: lib.rs
circuit/environment/: Cargo.toml
circuit/environment/benches/: linear_combination.rs
circuit/environment/src/: canary_circuit.rs  circuit.rs  environment.rs  error.rs  lib.rs  testnet_circuit.rs
circuit/environment/witness/: Cargo.toml
circuit/network/: Cargo.toml
circuit/network/src/: canary_v0.rs  lib.rs  testnet_v0.rs  v0.rs
circuit/program/: Cargo.toml
circuit/program/src/: lib.rs
circuit/src/: lib.rs
circuit/types/: Cargo.toml
circuit/types/address/: Cargo.toml
circuit/types/boolean/: Cargo.toml
circuit/types/field/: Cargo.toml
circuit/types/group/: Cargo.toml  build.rs
circuit/types/integers/: Cargo.toml
circuit/types/scalar/: Cargo.toml
circuit/types/src/: lib.rs
circuit/types/string/: Cargo.toml
console/: Cargo.toml
console/account/: Cargo.toml
console/account/benches/: account.rs
console/account/src/: lib.rs
console/algorithms/: Cargo.toml
console/algorithms/benches/: bhp.rs  ecdsa.rs  elligator2.rs  keccak.rs  poseidon.rs
console/algorithms/src/: lib.rs
console/collections/: Cargo.toml
console/collections/benches/: kary_merkle_tree.rs  merkle_tree.rs
console/collections/src/: lib.rs
console/network/: Cargo.toml
console/network/environment/: Cargo.toml
console/network/src/: canary_v0.rs  consensus_heights.rs  lib.rs  mainnet_v0.rs  testnet_v0.rs
console/program/: Cargo.toml
console/program/src/: lib.rs
console/src/: lib.rs
console/types/: Cargo.toml
console/types/address/: Cargo.toml
console/types/benches/: group.rs
console/types/boolean/: Cargo.toml
console/types/field/: Cargo.toml
console/types/group/: Cargo.toml
console/types/integers/: Cargo.toml
console/types/scalar/: Cargo.toml
console/types/src/: lib.rs
console/types/string/: Cargo.toml
curves/: Cargo.toml  build.rs
curves/benches/: curves.rs
curves/benches/bls12_377/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  mod.rs  pairing.rs
curves/src/: errors.rs  lib.rs
curves/src/bls12_377/: fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  mod.rs  parameters.rs  tests.rs
curves/src/edwards_bls12/: fq.rs  fr.rs  mod.rs  parameters.rs  tests.rs
curves/src/templates/: macros.rs  mod.rs  to_field_vec.rs
curves/src/traits/: group.rs  mod.rs  pairing_engine.rs  tests_field.rs  tests_group.rs  tests_projective.rs
fields/: Cargo.toml
fields/benches/: fields.rs
fields/src/: fp12_2over3over2.rs  fp2.rs  fp6_3over2.rs  fp_256.rs  fp_384.rs  legendre.rs  lib.rs  macros.rs  to_field_vec.rs
fields/src/errors/: constraint_field.rs  field.rs  mod.rs
fields/src/traits/: fft_field.rs  fft_parameters.rs  field.rs  field_parameters.rs  mod.rs  poseidon_default.rs  poseidon_grain_lfsr.rs  prime_field.rs  square_root_field.rs  to_constraint_field.rs  zero.rs
ledger/: Cargo.toml  README.md
ledger/authority/: Cargo.toml
ledger/authority/src/: bytes.rs  lib.rs  serialize.rs  string.rs
ledger/benches/: advance.rs  block.rs  bonded_mapping.rs  dag.rs  store.rs  transaction.rs
ledger/benches/common/: mod.rs
ledger/bins/: testchain_generator.rs
ledger/block/: Cargo.toml
ledger/block/src/: bytes.rs  genesis.rs  lib.rs  serialize.rs  string.rs  verify.rs
ledger/committee/: Cargo.toml  README.md
ledger/committee/src/: bytes.rs  lib.rs  prop_tests.rs  serialize.rs  string.rs  to_id.rs
ledger/narwhal/: Cargo.toml
ledger/narwhal/batch-certificate/: Cargo.toml
ledger/narwhal/batch-header/: Cargo.toml
ledger/narwhal/data/: Cargo.toml
ledger/narwhal/src/: lib.rs
ledger/narwhal/subdag/: Cargo.toml
ledger/narwhal/transmission/: Cargo.toml
ledger/narwhal/transmission-id/: Cargo.toml
ledger/puzzle/: Cargo.toml
ledger/puzzle/benches/: puzzle.rs
ledger/puzzle/epoch/: Cargo.toml
ledger/puzzle/src/: lib.rs
ledger/query/: Cargo.toml
ledger/query/src/: lib.rs  query.rs  static_query.rs  traits.rs
ledger/src/: advance.rs  check_next_block.rs  check_solution_limit.rs  check_transaction_basic.rs  contains.rs  error.rs  find.rs  get.rs  is_solution_limit_reached.rs  iterators.rs  lib.rs  test_helpers.rs  tests.rs
ledger/src/helpers/: bft.rs  mod.rs  supply.rs
ledger/store/: Cargo.toml  README.md
ledger/test-helpers/: Cargo.toml
ledger/testchain-generator/: Cargo.toml
ledger/tests/: block_cache.rs  pending_blocks.rs
utilities/: Cargo.toml
utilities/benches/: bigint.rs
utilities/derives/: Cargo.toml  README.md
utilities/src/: bititerator.rs  bits.rs  bytes.rs  defer.rs  error.rs  errors.rs  io.rs  iterator.rs  lib.rs  parallel.rs  print.rs  rand.rs  vm_error.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  tests.rs
(+1468 files in other folders)
