[package]
name = "snarkvm"
version = "4.3.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "vm", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.88.0" # Attention - Change the MSRV in rust-toolchain and in .circleci/config.yml as well

[workspace]
members = [
  "algorithms",
  "algorithms/cuda",
  "circuit",
  "circuit/account",
  "circuit/algorithms",
  "circuit/collections",
  "circuit/environment",
  "circuit/environment/witness",
  "circuit/network",
  "circuit/program",
  "circuit/types",
  "circuit/types/address",
  "circuit/types/boolean",
  "circuit/types/field",
  "circuit/types/group",
  "circuit/types/integers",
  "circuit/types/scalar",
  "circuit/types/string",
  "console",
  "console/account",
  "console/algorithms",
  "console/collections",
  "console/network",
  "console/network/environment",
  "console/program",
  "console/types",
  "console/types/address",
  "console/types/boolean",
  "console/types/field",
  "console/types/group",
  "console/types/integers",
  "console/types/scalar",
  "console/types/string",
  "curves",
  "fields",
  "ledger",
  "ledger/authority",
  "ledger/block",
  "ledger/committee",
  "ledger/narwhal",
  "ledger/narwhal/batch-certificate",
  "ledger/narwhal/batch-header",
  "ledger/narwhal/data",
  "ledger/narwhal/subdag",
  "ledger/narwhal/transmission",
  "ledger/narwhal/transmission-id",
  "ledger/puzzle",
  "ledger/puzzle/epoch",
  "ledger/query",
  "ledger/store",
  "ledger/test-helpers",
  "ledger/testchain-generator",
  "metrics",
  "parameters",
  "synthesizer",
  "synthesizer/process",
  "synthesizer/program",
  "synthesizer/snark",
  "utilities",
  "utilities/derives",
  "wasm"
]

[lib]
path = "vm/lib.rs"

[features]
default = [
  "algorithms",
  "circuit",
  "console",
  "ledger",
  "parameters",
  "synthesizer",
  "utilities",
  "package",
  "file",
]
full = [
  "default",
  "curves",
  "fields",
]
file = [
  "console",
  "synthesizer",
  "dep:serde_json"
]
package = [
  "algorithms",
  "circuit",
  "file",
  "ledger",
  "snarkvm-console/filesystem",
  "dep:ureq",
  "dep:dotenvy"
]

async = [ "snarkvm-ledger/async", "snarkvm-synthesizer/async" ]
cuda = [ "snarkvm-algorithms/cuda" ]
history = [ "snarkvm-synthesizer/history" ]
parameters_no_std_out = [ "snarkvm-parameters/no_std_out" ]
locktick = [
  "snarkvm-algorithms?/locktick",
  "snarkvm-ledger?/locktick",
  "snarkvm-parameters?/locktick",
  "snarkvm-synthesizer?/locktick"
]
noconfig = [ ]
rocks = [ "snarkvm-ledger/rocks", "snarkvm-synthesizer/rocks" ]
test = [ "snarkvm-ledger/test" ]
test-helpers = [ "snarkvm-ledger/test-helpers" ]
timer = [ "snarkvm-ledger/timer" ]
algorithms = [ "snarkvm-algorithms" ]
circuit = [ "snarkvm-circuit" ]
console = [ "snarkvm-console" ]
curves = [ "snarkvm-curves" ]
fields = [ "snarkvm-fields" ]
ledger = [ "snarkvm-ledger" ]
metrics = [ "snarkvm-metrics", "snarkvm-ledger/metrics" ]
parameters = [ "snarkvm-parameters" ]
synthesizer = [ "snarkvm-synthesizer" ]
utilities = [ "snarkvm-utilities" ]
wasm = [ "snarkvm-wasm" ]
serial = [
  "snarkvm-algorithms?/serial",
  "snarkvm-console?/serial",
  "snarkvm-curves?/serial",
  "snarkvm-fields?/serial",
  "snarkvm-utilities/serial",
  "snarkvm-ledger?/serial"
]

dev-print = [ 
  "snarkvm-utilities/dev-print",
  "snarkvm-algorithms/dev-print",
  "snarkvm-circuit/dev-print",
  "snarkvm-curves/dev-print",
  "snarkvm-fields/dev-print",
  "snarkvm-parameters/dev-print",
  "snarkvm-synthesizer/dev-print",
]
dev_skip_checks = [
  "snarkvm-console/dev_skip_checks",
  "snarkvm-synthesizer/dev_skip_checks"
]
save_r1cs_hashes = [ "snarkvm-circuit/save_r1cs_hashes" ]
test_exports = [ "snarkvm-algorithms/test_exports" ]
test_targets = [ "snarkvm-console/test_targets" ]
test_consensus_heights = [ "snarkvm-console/test_consensus_heights" ]

[workspace.dependencies.snarkvm-algorithms]
path = "algorithms"
version = "=4.3.0"
default-features = false

[workspace.dependencies.snarkvm-algorithms-cuda]
path = "algorithms/cuda"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit]
path = "circuit"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-account]
path = "circuit/account"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-algorithms]
path = "circuit/algorithms"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-collections]
path = "circuit/collections"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-environment]
path = "circuit/environment"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-environment-witness]
path = "circuit/environment/witness"
version = "=4.3.0"
default-features = false

[workspace.dependencies.snarkvm-circuit-network]
path = "circuit/network"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-program]
path = "circuit/program"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-types]
path = "circuit/types"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-types-address]
path = "circuit/types/address"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-types-boolean]
path = "circuit/types/boolean"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-types-field]
path = "circuit/types/field"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-types-scalar]
path = "circuit/types/scalar"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-types-string]
path = "circuit/types/string"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console]
path = "console"
version = "=4.3.0"
default-features = false

[workspace.dependencies.snarkvm-console-account]
path = "console/account"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console-algorithms]
path = "console/algorithms"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console-collections]
path = "console/collections"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console-network]
path = "console/network"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console-network-environment]
path = "console/network/environment"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console-program]
path = "console/program"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console-types]
path = "console/types"
version = "=4.3.0"
default-features = false

[workspace.dependencies.snarkvm-console-types-address]
path = "console/types/address"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console-types-boolean]
path = "console/types/boolean"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console-types-field]
path = "console/types/field"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console-types-group]
path = "console/types/group"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console-types-integers]
path = "console/types/integers"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console-types-scalar]
path = "console/types/scalar"
version = "=4.3.0"

[workspace.dependencies.snarkvm-console-types-string]
path = "console/types/string"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-types-group]
path = "circuit/types/group"
version = "=4.3.0"

[workspace.dependencies.snarkvm-circuit-types-integers]
path = "circuit/types/integers"
version = "=4.3.0"

[workspace.dependencies.snarkvm-curves]
path = "curves"
version = "=4.3.0"
default-features = false

[workspace.dependencies.snarkvm-fields]
path = "fields"
version = "=4.3.0"
default-features = false

[workspace.dependencies.snarkvm-ledger]
path = "ledger"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-authority]
path = "ledger/authority"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-block]
path = "ledger/block"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-committee]
path = "ledger/committee"
version = "=4.3.0"
default-features = false

[workspace.dependencies.snarkvm-ledger-narwhal]
path = "ledger/narwhal"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-narwhal-data]
path = "ledger/narwhal/data"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-narwhal-batch-header]
path = "ledger/narwhal/batch-header"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-narwhal-batch-certificate]
path = "ledger/narwhal/batch-certificate"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-narwhal-subdag]
path = "ledger/narwhal/subdag"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-narwhal-transmission]
path = "ledger/narwhal/transmission"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-narwhal-transmission-id]
path = "ledger/narwhal/transmission-id"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-puzzle]
path = "ledger/puzzle"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-puzzle-epoch]
path = "ledger/puzzle/epoch"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-query]
path = "ledger/query"
version = "=4.3.0"
default-features = false

[workspace.dependencies.snarkvm-ledger-store]
path = "ledger/store"
version = "=4.3.0"

[workspace.dependencies.snarkvm-ledger-test-helpers]
path = "ledger/test-helpers"
version = "=4.3.0"

[workspace.dependencies.snarkvm-metrics]
path = "metrics"
version = "=4.3.0"

[workspace.dependencies.snarkvm-parameters]
path = "parameters"
version = "=4.3.0"

[workspace.dependencies.snarkvm-synthesizer]
path = "synthesizer"
version = "=4.3.0"

[workspace.dependencies.snarkvm-synthesizer-process]
path = "synthesizer/process"
version = "=4.3.0"

[workspace.dependencies.snarkvm-synthesizer-program]
path = "synthesizer/program"
version = "=4.3.0"

[workspace.dependencies.snarkvm-synthesizer-snark]
path = "synthesizer/snark"
version = "=4.3.0"

[workspace.dependencies.snarkvm-utilities]
path = "utilities"
version = "=4.3.0"

[workspace.dependencies.snarkvm-utilities-derives]
path = "utilities/derives"
version = "=4.3.0"

[workspace.dependencies.snarkvm-wasm]
path = "wasm"
version = "=4.3.0"

[workspace.dependencies.aleo-std]
version = "1.0.1"

[workspace.dependencies.aleo-std-storage]
default-features=false
version = "1.0.1"

[workspace.dependencies.anyhow]
version = "1.0.73"
features = ["backtrace"]

[workspace.dependencies.bincode]
version = "1.3.3"

[workspace.dependencies.bytes]
version = "1"

[workspace.dependencies.cfg-if]
version = "1.0.0"

[workspace.dependencies.criterion]
version = "0.7"

[workspace.dependencies.colored]
version = "3"

[workspace.dependencies.dotenvy]
version = "0.15"

[workspace.dependencies.enum-iterator]
version = "2.1"

[workspace.dependencies.expect-test]
version = "1.4.1"

[workspace.dependencies.hex]
version = "0.4.3"

[workspace.dependencies.indexmap]
version = "2.0"

[workspace.dependencies.itertools]
version = "0.14"

[workspace.dependencies.lazy_static]
version = "1.4"

[workspace.dependencies.locktick]
version = "0.4"

[workspace.dependencies.lru]
version = "0.16"

[workspace.dependencies.num-traits]
version = "0.2"

[workspace.dependencies.nom]
version = "7.1"

[workspace.dependencies.parking_lot]
version = "0.12"

[workspace.dependencies.paste]
version = "1"

[workspace.dependencies.rand]
version = "0.8"

[workspace.dependencies.rand_chacha]
version = "0.3.1"

[workspace.dependencies.rayon]
version = "1"

[workspace.dependencies.serde]
version = "1.0.188"

[workspace.dependencies.serde_json]
version = "1.0"

[workspace.dependencies.serial_test]
version = "2.0"

[workspace.dependencies.sha2]
version = "0.10"
default-features = false

[workspace.dependencies.smallvec]
version = "1.14"

[workspace.dependencies.tempfile]
version = "3.15"

[workspace.dependencies.thiserror]
version = "2.0.11"

[workspace.dependencies.time]
version = "0.3"

[workspace.dependencies.tracing]
version = "0.1"

[workspace.dependencies.tracing-test]
version = "0.2.5"

[workspace.dependencies.ureq]
version = "3"
default-features = false

[workspace.dependencies.zeroize]
version = "1"

[dependencies.snarkvm-algorithms]
workspace = true
optional = true

[dependencies.snarkvm-circuit]
workspace = true
optional = true

[dependencies.snarkvm-console]
workspace = true
optional = true
features = [ "default" ]

[dependencies.snarkvm-curves]
workspace = true
optional = true

[dependencies.snarkvm-fields]
workspace = true
optional = true

[dependencies.snarkvm-ledger]
workspace = true
optional = true

[dependencies.snarkvm-metrics]
workspace = true
optional = true

[dependencies.snarkvm-parameters]
workspace = true
optional = true

[dependencies.snarkvm-synthesizer]
workspace = true
optional = true

[dependencies.snarkvm-utilities]
workspace = true
optional = true

[dependencies.snarkvm-wasm]
workspace = true
optional = true

[dependencies.anyhow]
workspace = true

[dependencies.dotenvy]
version = "0.15"
optional = true

[dependencies.rand]
workspace = true

[dependencies.serde_json]
workspace = true
optional = true
features = [ "preserve_order" ]

[dependencies.ureq]
workspace = true
optional = true
features = [ "json" ]
default-features = true

[dev-dependencies.snarkvm]
path = "."

[dev-dependencies.bincode]
workspace = true

[dev-dependencies.rusty-hook]
version = "0.11.2"

[dev-dependencies.tempfile]
workspace = true

[build-dependencies.walkdir]
version = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "off"
incremental = true

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug = true
debug-assertions = true

