[package]
name = "snarkvm-algorithms"
version = "4.3.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Algorithms for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2024"

[[bench]]
name = "variable_base"
path = "benches/msm/variable_base.rs"
harness = false

[[bench]]
name = "poseidon_sponge"
path = "benches/crypto_hash/poseidon.rs"
harness = false

[[bench]]
name = "fft"
path = "benches/fft/fft.rs"
harness = false
bench = false

[[bench]]
name = "varuna"
path = "benches/snark/varuna.rs"
harness = false
required-features = [ "test" ]

[dependencies.snarkvm-curves]
workspace = true

[dependencies.snarkvm-fields]
workspace = true

[dependencies.snarkvm-parameters]
workspace = true

[dependencies.snarkvm-utilities]
workspace = true

[dependencies.snarkvm-algorithms-cuda]
workspace = true
optional = true

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.blake2]
version = "0.10"
default-features = true

[dependencies.cfg-if]
workspace = true

[dependencies.fxhash]
version = "0.2.1"

[dependencies.hashbrown]
version = "0.15"

[dependencies.hex]
workspace = true

[dependencies.indexmap]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive" ]

[dependencies.sha2]
workspace = true

[dependencies.smallvec]
workspace = true
features = [ "const_generics", "const_new" ]

[dependencies.thiserror]
workspace = true

[dependencies.num-traits]
workspace = true

[dev-dependencies.expect-test]
workspace = true

[dev-dependencies.bincode]
workspace = true

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[dev-dependencies.serial_test]
workspace = true

[dev-dependencies.snarkvm-parameters]
workspace = true
features = [ "filesystem" ]

[features]
cuda = [ "snarkvm-algorithms-cuda" ]
locktick = [ "snarkvm-parameters/locktick" ]
profiler = [ "aleo-std/profiler" ]
test = [ ]
serial = [
  "snarkvm-curves/serial",
  "snarkvm-fields/serial",
  "snarkvm-utilities/serial"
]
test_exports = [ ]
dev-print = [ "snarkvm-utilities/dev-print" ]
