[package]
name = "snarkvm-circuit"
version = "4.3.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Circuits for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2024"

[features]
save_r1cs_hashes = [ "snarkvm-circuit-environment/save_r1cs_hashes" ]
dev-print = ["snarkvm-circuit-environment/dev-print"]

[dependencies.snarkvm-circuit-account]
workspace = true

[dependencies.snarkvm-circuit-algorithms]
workspace = true

[dependencies.snarkvm-circuit-collections]
workspace = true

[dependencies.snarkvm-circuit-environment]
workspace = true

[dependencies.snarkvm-circuit-network]
workspace = true

[dependencies.snarkvm-circuit-program]
workspace = true

[dependencies.snarkvm-circuit-types]
workspace = true
