[package]
name = "snarkvm-console"
version = "4.0.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Console environment for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2024"

[dependencies.snarkvm-console-account]
workspace = true
optional = true

[dependencies.snarkvm-console-algorithms]
workspace = true
optional = true

[dependencies.snarkvm-console-collections]
workspace = true
optional = true

[dependencies.snarkvm-console-network]
workspace = true
optional = true

[dependencies.snarkvm-console-program]
workspace = true
optional = true

[dependencies.snarkvm-console-types]
workspace = true
optional = true

[features]
default = [
  "account",
  "algorithms",
  "collections",
  "filesystem",
  "network",
  "program",
  "types"
]
wasm = [ "snarkvm-console-network/wasm" ]
test = [
  "snarkvm-console-account/test",
  "snarkvm-console-network/test",
  "snarkvm-console-program/test"
]
account = [ "network", "snarkvm-console-account" ]
algorithms = [ "snarkvm-console-algorithms" ]
collections = [ "algorithms", "snarkvm-console-collections" ]
filesystem = [ "snarkvm-console-network/filesystem" ]
network = [ "collections", "snarkvm-console-network" ]
program = [ "network", "snarkvm-console-program" ]
serial = [ "snarkvm-console-collections/serial" ]
types = [ "snarkvm-console-types" ]
test_targets = [ "snarkvm-console-network/test_targets" ]
test_consensus_heights = [ "snarkvm-console-network/test_consensus_heights" ]
