[package]
name = "snarkvm-curves"
version = "4.2.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Curves for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [
  "Cargo.toml",
  "src",
  "README.md",
  "LICENSE.md",
  "documentation/"
]
license = "Apache-2.0"
edition = "2024"

[[bench]]
name = "curves"
path = "benches/curves.rs"
harness = false

[dependencies.snarkvm-fields]
workspace = true
default-features = false

[dependencies.snarkvm-utilities]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive" ]

[dependencies.thiserror]
workspace = true

[dev-dependencies.bincode]
workspace = true

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.rand]
workspace = true

[build-dependencies]
rustc_version = "0.4"

[features]
serial = [ "snarkvm-fields/serial" ]
dev-print = [ "snarkvm-utilities/dev-print" ]
