[package]
name = "snarkvm-fields"
version = "4.5.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Fields for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2024"

[[bench]]
name = "fields"
path = "benches/fields.rs"
harness = false

[dependencies.snarkvm-utilities]
workspace = true

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.num-traits]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive" ]

[dependencies.thiserror]
workspace = true

[dependencies.zeroize]
workspace = true
features = [ "derive" ]

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.snarkvm-curves]
path = "../curves"
default-features = false

[features]
profiler = [ "aleo-std/profiler" ]
serial = [ ]
dev-print = [ "snarkvm-utilities/dev-print" ]
