[package]
name = "snarkvm-ledger"
version = "4.4.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A node ledger for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "web-programming" ]
license = "Apache-2.0"
edition = "2024"

[[test]]
name = "block-cache"
path = "tests/block_cache.rs"
required-features = [ "rocks" ]

[[bench]]
name = "block"
path = "benches/block.rs"
harness = false
required-features = [ "test-helpers", "rocks" ]

[[bench]]
name = "bonded_mapping"
path = "benches/bonded_mapping.rs"
harness = false

[[bench]]
name = "store"
path = "benches/store.rs"
harness = false
required-features = [ "test-helpers", "rocks" ]

[[bench]]
name = "advance"
path = "benches/advance.rs"
harness = false
required-features = [ "test-helpers", "rocks" ]

[[bench]]
name = "dag"
path = "benches/dag.rs"
harness = false
required-features = ["test-helpers"]

[[bench]]
name = "transaction"
path = "benches/transaction.rs"
harness = false

[features]
default = [ "async", "indexmap/rayon", ]
async = [
  "snarkvm-ledger-narwhal/async",
  "snarkvm-ledger-query/async",
  "snarkvm-synthesizer/async"
]
history = [
  "snarkvm-ledger-store/history",
  "snarkvm-synthesizer/history",
]
history-staking-rewards = [
  "snarkvm-ledger-store/history-staking-rewards",
  "snarkvm-synthesizer/history-staking-rewards",
]
locktick = [
  "dep:locktick",
  "snarkvm-ledger-puzzle/locktick",
  "snarkvm-ledger-store/locktick",
  "snarkvm-synthesizer/locktick"
]
metrics = [ "snarkvm-ledger-committee/metrics" ]
rocks = [ "snarkvm-ledger-store/rocks" ]
serial = [
  "snarkvm-console/serial",
  "snarkvm-ledger-authority/serial",
  "snarkvm-ledger-block/serial",
  "snarkvm-ledger-committee/serial",
  "snarkvm-ledger-narwhal/serial",
  "snarkvm-ledger-puzzle/serial",
  "snarkvm-ledger-query/serial",
  "snarkvm-ledger-store/serial",
  "snarkvm-synthesizer/serial"
]
test = [
  "snarkvm-console/test",
  "snarkvm-ledger-block/test",
  "snarkvm-ledger-store/test",
  "snarkvm-synthesizer/test"
]
test-helpers = [
  "snarkvm-ledger-test-helpers",
  "snarkvm-ledger-committee/test-helpers",
  "snarkvm-ledger-narwhal/test-helpers",
  "dep:snarkvm-circuit"
]
test_targets = [
  "snarkvm-console/test_targets",
]
timer = [ "aleo-std/timer" ]

[dependencies.snarkvm-console]
workspace = true

[dependencies.snarkvm-ledger-authority]
workspace = true

[dependencies.snarkvm-ledger-block]
workspace = true

[dependencies.snarkvm-ledger-committee]
workspace = true

[dependencies.snarkvm-circuit]
workspace = true
optional = true

[dependencies.snarkvm-ledger-narwhal]
workspace = true

[dependencies.snarkvm-ledger-puzzle]
workspace = true

[dependencies.snarkvm-ledger-query]
workspace = true
features = [ "query" ]

[dependencies.snarkvm-ledger-store]
workspace = true

[dependencies.snarkvm-ledger-test-helpers]
workspace = true
optional = true

[dependencies.snarkvm-synthesizer]
workspace = true

[dependencies.snarkvm-synthesizer-error]
workspace = true

[dependencies.snarkvm-utilities]
workspace = true

[dependencies.aleo-std]
workspace = true
features = [ "storage" ]

[dependencies.anyhow]
workspace = true

[dependencies.indexmap]
workspace = true
features = [ "serde" ]

[dependencies.locktick]
workspace = true
features = [ "parking_lot" ]
optional = true

[dependencies.lru]
workspace = true

[dependencies.parking_lot]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.rand_chacha]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.time]
workspace = true

[dependencies.tracing]
workspace = true

[dev-dependencies.bincode]
workspace = true

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.snarkvm-console]
workspace = true
features = [ "filesystem" ]

[dev-dependencies.snarkvm-ledger]
path = "."
features = [ "test-helpers" ]

[dev-dependencies.snarkvm-ledger-block]
workspace = true
features = [ "test" ]

[dev-dependencies.snarkvm-ledger-test-helpers]
workspace = true

[dev-dependencies.aleo-std-storage]
workspace = true

[dev-dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[dev-dependencies.snarkvm-circuit]
workspace = true

[dev-dependencies.snarkvm-synthesizer]
workspace = true
features = [ "test" ]

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter", "std" ]
