[package]
name = "snarkvm-utilities"
version = "4.4.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Utilities for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2024"

[dependencies.snarkvm-utilities-derives]
workspace = true
optional = true

[dependencies.aleo-std]
workspace = true
features = [ "cpu" ]

[dependencies.anyhow]
workspace = true

[dependencies.bincode]
workspace = true

[dependencies.colored]
workspace = true

[dependencies.num_cpus]
version = "1"

[dependencies.num-bigint]
version = "0.4"

[dependencies.rand]
workspace = true
features = [ "getrandom", "std_rng" ]

[dependencies.rayon]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive" ]

[dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[dependencies.smol_str]
version = "0.2"

[dependencies.tracing]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.rand_xorshift]
version = "0.3"
default-features = false

[dependencies.zeroize]
workspace = true
features = [ "derive" ]

[dev-dependencies.tracing-test]
workspace = true

[features]
default = [ "derive" ]
derive = [ "snarkvm-utilities-derives" ]
dev-print = [ ]
serial = [ "derive" ]
wasm = [ ]
