[package]
name = "snarkvm-wasm"
version = "3.8.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "WASM for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
default = [ "full" ]
full = [
  "circuit",
  "console",
  "curves",
  "fields",
  "ledger",
  "synthesizer",
  "utilities"
]
circuit = [ ]
console = [ "snarkvm-console" ]
curves = [ "snarkvm-curves" ]
fields = [ "snarkvm-fields" ]
ledger = [
  "snarkvm-ledger-block",
  "snarkvm-ledger-query",
  "snarkvm-ledger-store"
]
synthesizer = [ "snarkvm-synthesizer" ]
utilities = [ "snarkvm-utilities" ]

[dependencies.snarkvm-console]
path = "../console"
version = "=3.8.0"
features = [ "wasm" ]
optional = true

[dependencies.snarkvm-curves]
path = "../curves"
version = "=3.8.0"
optional = true

[dependencies.snarkvm-fields]
path = "../fields"
version = "=3.8.0"
optional = true

[dependencies.snarkvm-ledger-block]
path = "../ledger/block"
version = "=3.8.0"
features = [ "wasm" ]
optional = true

[dependencies.snarkvm-ledger-query]
path = "../ledger/query"
version = "=3.8.0"
features = [ "async", "wasm" ]
optional = true

[dependencies.snarkvm-ledger-store]
path = "../ledger/store"
version = "=3.8.0"
features = [ "wasm" ]
optional = true

[dependencies.snarkvm-synthesizer]
path = "../synthesizer"
version = "=3.8.0"
default-features = false
features = [ "async", "wasm" ]
optional = true

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "=3.8.0"
features = [ "wasm" ]
optional = true

[dependencies.getrandom]
version = "0.2"
features = [ "js" ]

[dev-dependencies.wasm-bindgen-test]
version = "0.3.37"

[package.metadata.cargo-machete]
ignored = [
  "getrandom", # Needed to enable js feature
]
