[package]
name = "snarkvm-wasm"
version = "4.3.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "WASM for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2024"

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
default = [ "full" ]
full = [
  "circuit",
  "curves",
  "fields",
  "ledger",
  "synthesizer",
  "utilities"
]
circuit = [ ]
curves = [ "snarkvm-curves" ]
fields = [ "snarkvm-fields" ]
ledger = [
  "snarkvm-ledger-block",
  "snarkvm-ledger-query",
  "snarkvm-ledger-store"
]
synthesizer = [ "snarkvm-synthesizer" ]
utilities = [ "snarkvm-utilities" ]
dev-print = [ "snarkvm-utilities/dev-print" ]

[dependencies.snarkvm-console]
workspace = true
features = [ "wasm" ]

[dependencies.snarkvm-curves]
workspace = true
optional = true

[dependencies.snarkvm-fields]
workspace = true
optional = true

[dependencies.snarkvm-ledger-block]
workspace = true
features = [ "wasm" ]
optional = true

[dependencies.snarkvm-ledger-query]
workspace = true
features = [ "async", "wasm" ]
optional = true

[dependencies.snarkvm-ledger-store]
workspace = true
features = [ "wasm" ]
optional = true

[dependencies.snarkvm-synthesizer]
workspace = true
features = [ "async", "wasm" ]
optional = true

[dependencies.snarkvm-utilities]
workspace = true
features = [ "wasm" ]
optional = true

[dependencies.getrandom]
version = "0.2"
features = [ "js" ]

[dev-dependencies.wasm-bindgen-test]
version = "0.3.37"

[dev-dependencies.snarkvm-utilities]
workspace = true
features = [ "wasm" ]

[package.metadata.cargo-machete]
ignored = [
  "getrandom", # Needed to enable js feature
]
