[package]
name = "snarkvm-circuit-account"
version = "3.8.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Account circuit library for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2024"

[dependencies.snarkvm-console-account]
workspace = true

[dependencies.snarkvm-circuit-network]
workspace = true

[dependencies.snarkvm-circuit-types]
workspace = true

[dev-dependencies.snarkvm-utilities]
workspace = true

[dev-dependencies.anyhow]
workspace = true
