[package]
name = "snarkvm-circuit-account"
version = "3.8.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Account circuit library for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2021"

[dependencies.console]
package = "snarkvm-console-account"
path = "../../console/account"
version = "=3.8.0"
optional = true

[dependencies.snarkvm-circuit-network]
path = "../network"
version = "=3.8.0"

[dependencies.snarkvm-circuit-types]
path = "../types"
version = "=3.8.0"

[dev-dependencies.snarkvm-utilities]
path = "../../utilities"

[dev-dependencies.anyhow]
version = "1.0.73"

[features]
default = [ "enable_console" ]
enable_console = [ "console" ]
