[package]
name = "snarkvm-circuit-algorithms"
version = "3.8.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Algorithm circuit library for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2021"

[dependencies.snarkvm-console-algorithms]
workspace = true

[dependencies.snarkvm-circuit-types]
workspace = true

[dependencies.snarkvm-fields]
workspace = true

[dev-dependencies.anyhow]
workspace = true

[dev-dependencies.snarkvm-curves]
workspace = true

[dev-dependencies.snarkvm-utilities]
workspace = true

[lints.clippy]
manual_div_ceil = "allow"
